--- a/page1.html
+++ b/page1.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=5vw">
-    <title>Page 1</title>
+    <title>Portfolio - Week 1</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <header>Welcome To The Basic Website</header>
+    <header><h1>Welcome To The Basic Website!</h1></header>
 </body>
 </html>
