--- a/page1.html
+++ b/page1.html
@@ -2,12 +2,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=5vw">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio - Week 1</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
     <header><h1>Welcome To The Basic Website!</h1></header>
-    <p></p>
+    <nav>
+            Navigation |
+            <a href="page2.html" target="_self">Page Two</a> 
+    </nav>
+    <br>
+    <div class="container">
+        <p>This is our first column of content.</p>
+        <p>This is our second column of content.</p>
+    </div>
 </body>
 </html>
