--- a/page1.html
+++ b/page1.html
@@ -3,19 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Week 1</title>
+    <title>Main Page (Week 1)</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <header><h1>Welcome To The Basic Website!</h1></header>
+    <header><h1>welcome to the portfolio website!</h1></header>
+    <br>
     <nav>
-            Navigation |
-            <a href="page2.html" target="_self">Page Two</a> 
+            navigation; <a href="page2.html" target="_self">page two</a> (week 1);
     </nav>
     <br>
-    <div class="container">
-        <p>This is our first column of content.</p>
-        <p>This is our second column of content.</p>
+    <section>the main page (this page) and page two were created as part of the portofolio work for week 1<br>
+        further pages will be added in future weeks, for the relevant week's work
+    </section>
+    <br>
+    <div class="grid-container">
+        <p class="grid-item1">Nous ne sommes pas étrangers à l'amour<br>
+            Tu connais les règles et moi aussi (est-ce que je)<br>
+            Un engagement total est ce à quoi je pense<br>
+            Tu n'obtiendrais pas ça d'un autre gars<br>
+            Je veux juste te dire ce que je ressens<br>
+            Je dois te faire comprendre<br>
+            Je ne t'abandonnerai jamais<br>
+            Je ne te laisserai jamais tomber<br>
+            Je ne vais jamais courir partout et t'abandonner<br>
+            Je ne te ferai jamais pleurer<br>
+            Je ne dirai jamais au revoir<br>
+            Je ne mentirai jamais et ne te ferai jamais de mal</p>  
+        <p class="grid-item2">Chan eil sinn choigreach airson gaol<br>
+            Tha fios agad air na riaghailtean agus mar sin tha mi (dèan mi)<br>
+            Is e làn ghealladh na tha mi a smaoineachadh<br>
+            Chan fhaigheadh tu seo bho fhear sam bith eile<br>
+            Tha mi dìreach airson innse dhut mar a tha mi a faireachdainn<br>
+            Feumaidh tu toirt ort tuigsinn<br>
+            Na toir seachad thu gu bràth<br>
+            Na leig thu sìos gu bràth<br>
+            Na ruith gu bràth mun cuairt agus na trèigsinn thu<br>
+            Na toir ort caoineadh gu bràth<br>
+            Na bi a-riamh ag ràdh soraidh slàn<br>
+            Na bi a-riamh ag innse breug agus gad ghortachadh</p>
+        <p class="grid-item3">We zijn geen vreemden in de liefde<br>
+            Jij kent de regels en ik ook (ik ook)<br>
+            Een volledige verbintenis is waar ik aan denk<br>
+            Dit zou je van geen enkele andere man krijgen<br>
+            Ik wil je gewoon vertellen hoe ik me voel<br>
+            Ik moet je het laten begrijpen<br>
+            Ik zal je nooit opgeven<br>
+            Ik zal je nooit in de steek laten<br>
+            Ik zal nooit rondrennen en je in de steek laten<br>
+            Ik zal je nooit aan het huilen maken<br>
+            Ik ga nooit afscheid nemen<br>
+            Ik zal nooit een leugen vertellen en je pijn doen</p>
     </div>
+    <br>
+    <br>
+    <footer>We promise to never give you up, let you down, run around or desert you. 
+    We will never make you cry, nor will we say goodbye, or even tell a lie and hurt you.</footer>
 </body>
 </html>
