--- a/page2.html
+++ b/page2.html
@@ -3,12 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 1 - Page 2</title>
+    <title>Page 2 (Week 1)</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    
-    <h1>test, delete later!</h1>
-
+    <header><h1>page two</h1></header>
+    <br>
+    <nav>
+            navigation; <a href="page1.html" target="_self">main page</a> (week 1);
+    </nav>
+    <br>
+    <section>this page is part of the week 1 portfolio work<br>
+        further pages will be added in future weeks, for the relevant week's work
+    </section>
+    <br>
+    <div class="grid-container">
+        <p class="grid-item1"></p>
+        <p class="grid-item2"></p>
+        <p class="grid-item3"></p>
+    </div>
+    <br>
+    <br>
+    <footer>We promise to never give you up, let you down, run around or desert you. 
+    We will never make you cry, nor will we say goodbye, or even tell a lie and hurt you.</footer>
 </body>
 </html>
