--- a/page2.html
+++ b/page2.html
@@ -10,7 +10,7 @@
     <header><h1>page two</h1></header>
     <br>
     <nav>
-            navigation; <a href="page1.html" target="_self">main page</a> (week 1);
+            navigation; <a href="index.html" target="_self">main page</a> (week 1);
     </nav>
     <br>
     <section>this page is part of the week 1 portfolio work<br>
