--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
 </head>
 <body>
     <header><h1>welcome to the portfolio website!</h1></header>
-    <br>
     <nav>
-            navigation; <a href="page2.html" target="_self">page two</a> (week 1);
+            navigation; <a href="page2.html" target="_self">page two;</a>
     </nav>
     <br>
-    <section>the main page (this page) and page two were created as part of the portofolio work for week 1<br>
-        further pages will be added in future weeks, for the relevant week's work
-    </section>
+    <section>this main page and page two were created for the exercises set in week 1 of the web programing module</section>
     <br>
     <div class="grid-container">
         <p class="grid-item1">Nous ne sommes pas étrangers à l'amour<br>
@@ -56,8 +53,7 @@
             Ik zal nooit een leugen vertellen en je pijn doen</p>
     </div>
     <br>
-    <br>
-    <footer>We promise to never give you up, let you down, run around or desert you. 
-    We will never make you cry, nor will we say goodbye, or even tell a lie and hurt you.</footer>
+    <footer>we promise to never give you up, let you down, run around or desert you. 
+    we will never make you cry, nor will we say goodbye, or even tell a lie and hurt you.</footer>
 </body>
 </html>
