--- a/page2.html
+++ b/page2.html
@@ -8,23 +8,33 @@
 </head>
 <body>
     <header><h1>page two</h1></header>
-    <br>
     <nav>
-            navigation; <a href="index.html" target="_self">main page</a> (week 1);
+            navigation; <a href="index.html" target="_self">main page;</a>
     </nav>
     <br>
-    <section>this page is part of the week 1 portfolio work<br>
-        further pages will be added in future weeks, for the relevant week's work
-    </section>
+    <section>this page and the main page were created for the exercises set in week 1 of the web programing module</section>
     <br>
     <div class="grid-container">
-        <p class="grid-item1"></p>
-        <p class="grid-item2"></p>
-        <p class="grid-item3"></p>
+        <p class="grid-item1">the text on the main page was just the beginning of rick astley's "never gonna give you up" translated into different languages. <br>
+            those languages being french, scottish gaelic, and dutch. french because i studied it at gcse, scottish gaelic because i want to learn it, and dutch because of a long distance friend.<br>
+            sorry i just didn't know what to put as content on the page, but i wanted it to at least be something.</p>
+        <p class="grid-item2">i decided to take that impulsive idea and ran with it, which leads to the text in the footer, and since i have no clue what to put in this text, i'll do the same for the final column of this page.<br>
+            the design for this page is based on the stereotypical "code" always seen in tv and films. i just thought it would be funny, and it gave me a good theme to run with, so i kept it. that's why almost everything is in lower case.</p>
+        <p class="grid-item3">We're no strangers to love<br>
+            You know the rules and so do I (do I)<br>
+            A full commitment's what I'm thinking of<br>
+            You wouldn't get this from any other guy<br>
+            I just wanna tell you how I'm feeling<br>
+            Gotta make you understand<br>
+            Never gonna give you up<br>
+            Never gonna let you down<br>
+            Never gonna run around and desert you<br>
+            Never gonna make you cry<br>
+            Never gonna say goodbye<br>
+            Never gonna tell a lie and hurt you</p>
     </div>
     <br>
-    <br>
-    <footer>We promise to never give you up, let you down, run around or desert you. 
-    We will never make you cry, nor will we say goodbye, or even tell a lie and hurt you.</footer>
+    <footer>we promise to never give you up, let you down, run around or desert you. 
+    we will never make you cry, nor will we say goodbye, or even tell a lie and hurt you.</footer>
 </body>
 </html>
